# photon

./: .gitignore  .prettierignore  .releaserc.json  .stylelintrc.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  FLOATING_POLISH.md  LICENSE  PRD.md  README.md  TODO.temp.md  UI_FIXES.md  audit.md  dev-app-update.yml  electron-builder.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.tauri.config.ts
.github/workflows/: ci.yml  release.yml  rust-ci.yml
docs/: TODO-playback.md  index.html
docs/adr/: 0001-hybrid-search.md  0002-playback-engine-interface.md  0003-mpv-only-playback-engine.md  0004-lgpl-libmpv-build.md  0005-libmpv-render-api-in-process.md  0006-mini-window-instead-of-os-pip.md  0007-raw-mpv-config-instead-of-styling-gui.md  0008-always-direct-play.md  0009-gpu-render-surface-for-mpv-on-macos.md
docs/agents/: issue-tracker.md  triage-labels.md
docs/audits/: fixes-from-real-use.md  mpv-optimization-research.md  mpv-player-audit.md
rnd/mpv-spike/: FINDINGS.md  index.html  package-lock.json  package.json
rnd/mpv-spike/src/: main.ts
rnd/mpv-spike/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
rnd/mpv-spike/src-tauri/src/: lib.rs  main.rs  mpv_engine.rs
scripts/: sync-tauri-version.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pip.rs  updater.rs
src-tauri/src/mpv/: commands.rs  engine.rs  mod.rs  profile.rs  surface.rs
src-tauri/src/mpv/linux/: mod.rs
src-tauri/src/mpv/mac/: gpu.rs  mod.rs  software.rs
src-tauri/src/mpv/windows/: mod.rs
src/main/: index.ts  mpv.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx  router.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: Card.module.css  Card.tsx  CardSkeleton.module.css  CardSkeleton.tsx  ControlsBar.tsx  FavoriteButton.tsx  IconToggle.tsx  LibraryGrid.module.css  LibraryGrid.tsx  NextUpCard.tsx  PhotonMark.module.css  PhotonMark.tsx  PipOverlay.module.css  PipOverlay.tsx  PlayerControls.module.css  PlayerControls.tsx  Ratings.module.css  Ratings.tsx  RouteFallback.module.css  RouteFallback.tsx  Row.module.css  Row.tsx  SkipSegmentButton.tsx  Stepper.tsx  SubtitleStyleTag.tsx  TimelinePreview.tsx  Tip.module.css  Tip.tsx  ToggleSwitch.tsx  TrackSelectMenu.tsx  WatchedButton.tsx
src/renderer/src/hooks/: useAutoHideControls.ts  useMediaSession.ts  useSubtitleSelection.ts  useToast.ts  useWakeLock.ts
src/renderer/src/lib/: api.ts  colorSchemes.ts  itemMutations.ts  jellyfin.test.ts  jellyfin.ts  lib.test.ts  noFocusOnClick.ts  platform.ts  queries.ts  queryKeys.ts  search.ts  settingsSections.ts  tauriBridge.ts  theme.ts  updater.ts  useHotkeys.ts
src/renderer/src/pages/: AboutSettings.tsx  AdvancedSettings.tsx  AppLayout.module.css  AppLayout.tsx  AppearanceSettings.tsx  Details.module.css  DetailsShell.tsx  EpisodeDetails.tsx  GeneralSettings.tsx  Home.module.css  Home.tsx  Login.module.css  Login.tsx  MovieDetails.tsx  Movies.tsx  MpvPlayer.tsx  PlaybackSettings.tsx  Player.module.css  Player.tsx  Search.module.css  Search.tsx  ServerSettings.tsx  Settings.module.css  Settings.tsx  SettingsSection.tsx  Shortcuts.module.css  Shortcuts.tsx  ShowDetails.tsx  Shows.tsx  StatsSettings.tsx  SubtitleSettings.tsx
src/renderer/src/player/: deviceProfile.test.ts  deviceProfile.ts  engine.ts  html5.ts  mpv.ts  mpvConfig.test.ts  mpvConfig.ts  session.test.ts  session.ts  subtitleLogic.ts  usePlayback.ts  usePlayerEngine.ts
src/renderer/src/stores/: searchHistory.ts  session.ts  settings.ts  trackMemory.ts  ui.ts  watchStats.ts
src/renderer/src/styles/: base.css  tokens.css
