[package]
name = "photon"
version = "1.5.1"
description = "A calm, minimal desktop media player built exclusively for Jellyfin"
authors = ["Salauddin Omar Sifat"]
edition = "2021"

[lib]
name = "photon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libmpv-sys = "3"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
foreign-types = "0.5"
