[package]
name = "photon"
version = "1.5.1"
description = "A calm, minimal desktop media player built exclusively for Jellyfin"
authors = ["Salauddin Omar Sifat"]
edition = "2021"

[lib]
name = "photon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# objc 0.2.x's msg_send!/sel_impl! macros expand to a `cfg(feature =
# "cargo-clippy")` check internally (a pre-`--check-cfg` clippy-detection
# trick from a now-unmaintained crate) -- fires at every call site using
# those macros. A source-level #[allow(unexpected_cfgs)] doesn't suppress it
# (rustc's check-cfg diagnostic isn't scoped by the macro's call-site
# attributes here), so it has to be silenced at the lint-config level instead.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libmpv-sys = "3"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
foreign-types = "0.5"
